<resources>
   <string name="action_apply_location">Apply Marker to My Location</string>
   <string name="action_confirm_location">Confirm Location</string>
   <string name="action_settings">Settings</string>
   <string name="action_site">Add Site Pictures</string>
   <string name="action_camera">Use Camera</string>
   <string name="action_make">Generate Report</string>
   <string name="action_view_photo">View Image</string>
   <string name="action_use_drawing">Use for drawing map</string>
   <string name="action_makemap1">Native Chart</string>
   <string name="action_makemap2">JS Chart</string>
   <string name="edit_message">Enter your text here</string>
   <string name="ok">OK</string>
   <string name="cancel">Cancel</string>
   <string name="myes">YES</string>
   <string name="mno">NO</string>
   <string name="label_line_cut">Toggle L</string>
   <string name="label_pt_insert">Insert</string>
   <string name="remove">Remove</string>
   <string name="edit_label">Edit Label</string>
   <string name="edit_tag">Edit Tag</string>
   <string name="enterresult">Enter Measure</string>
   <string name="log_out">Log Out</string>
   <string name="clear">Clear</string>
   <string name="done">Done</string>
   <string name="form_sign">Autograph</string>
   <string name="pensetting">Pen settings</string>
   <string name="toggle_toolbar">Tool Bar Toggle</string>
   <string name="next">Next</string>
   <string name="last">Last</string>
   <string name="goto1st">First</string>
   <string name="editmap">Resume Editing</string>
   <string name="startmap">Start Edit</string>
   <string name="no">nah</string>
   <string name="caption_here">Caption Box</string>
   <string name="warning01">Please fill up the blank field.</string>
   <string name="warning02">The value is not expected from the defined field.</string>
   <string name="warning03">Unable to update the item data.</string>
   <string name="warn_new_row">Cannot insert new record because this is on the top list.</string>
   <string name="notice_new_row">New record added.</string>
   <string name="notice_new_row_insert">New record is inserted.</string>
   <string name="notice_done">Update Done.</string>
   <string name="notice_no_signature_required">no signature is required</string>
   <string name="notice_sign_now_only_client">Data is filled and completed. Now please confirm with the client signature. Press the button on the top right corner.</string>
   <string name="notice_sign_now_both_parties">Data is filled and completed. Now please verify with both signatures from the client side and the team side. Press the buttons on the top right corner.</string>
   <string name="notice_not_form_not_complete">Sorry this form is not completed please double check with inputs above.</string>
   <string name="notice_form_save_and_complete">This form is complete.</string>
   <string name="notice_progress_list">Updating the list...</string>
   <string name="notice_progress_check">Checking...</string>
   <string name="notice_already_have_draw_map">You have this draw map started. Please check with the draw map list on the Job Task.</string>
   <string name="notice_no_network">There is no network. Please find the nearest WIFI access.</string>
   <string name="notice_node_exit_error">Please make sure all RED indications are removed.</string>
   <string name="notice_title_abpoint">Press done when the AB positioning are confirmed.</string>
   <string name="marker_notified">Marker Notified!</string>
   <string name="question_map_ab_1">Since there is no data for the position A and the position B, you will now need define both observation point A and the B now.</string>
   <string name="notice_start">Start drawing the route according from the map now.</string>
   <string name="notice_end">The route map is now finished.</string>
   <string name="notice_route_data">You may now need to edit the measuring data for trail pits, route location points, and other reporting data.</string>
   <string name="warn_not_allowed">Sorry, you are not allow to close this because you are required to complete the current task first.</string>
   <string name="warn_nodatatostart">There is no data from the observation list. Please enter the working data in the list first.</string>
   <string name="warn_no_enough_data_tostart">Please go back and double check with the AB point or the data list for measurement errors. (The highlighted red measurements need to be fixed or reported again)</string>
   <string name="warn_radiuschanged">The radius has changed, you need to render the chart in order to see the result.</string>
   <string name="notice_meter_dialog_part">The current map ratio is 1:</string>
   <string name="question_do_0">Do you want to clear the current plotting data and make some adjustment of the AB points?</string>
   <string name="question_distance_ratio">The labels will be updated on Point A and Point B and there will be an update for the ratio distance between Point A and Point B. All existing drawings with the cable measurements will need to be redone. Confirm (YES) to exit the current configuration and (NO) to reconfig these settings.</string>
   <string name="question_upload">The reporting map is successfully exported, do you want to upload this map now?</string>
   <string name="question_sb_quit">The survey boundary drawing is not completed, do you still want to quit editing survey boundary mode?</string>
   <string name="question_do_exit">You are about to exit this Application. Any unsaved or not exported data will be removed. Do you want to do so?</string>
   <string name="question_move_points">You have a set of measurement data filled on the report list. If you want to change the current location point of A and B, all the previous measurement points will be removed and they will need to be redone. Do you want to do so?</string>
   <string name="question_start_map_draw">Do you use this image as the record drawing map?</string>
   <string name="question_exit_draw_map_application">Do you want generate the draw map file and then exit?</string>
   <string name="notice_image_generated">The base map image is generated successfully.</string>
   <string name="notice_no_downloaded_pictures">There is no related assigned images for work progress. Please contact to our OneCall staffs for the images to be assigned.</string>
   <string name="notice_no_drew_images">There is no drew image records</string>
   <string name="notice_no_site_photo_taken">There is no site photos taken and recorded in this JOB ID. You can add new pictures by the camera or from the internal device.</string>
   <string name="notice_check_submission_result">The checking progress is done and there are a few items outstanding and they are listed as below:</string>
   <string name="verification_condition_1">- Not all draw maps are exported in file.</string>
   <string name="verification_condition_2">- Please check at least 3 location maps presented.</string>
   <string name="verification_condition_3">- Line record form is not completed.</string>
   <string name="verification_condition_4">- GPS location is not calibrated.</string>
   <string name="editingitemon">Editing item on: snapshot #%1$s</string>
   <string name="surveypath">Survey Boundary Path is now Completed.</string>
   <string name="surveypathdone">Survey Boundary Path is already done.</string>
   <string name="sbreset">Survey Boundary was reset.</string>
   <string name="tablabel1">Select Line</string>
   <string name="tablabel2">Add #</string>
   <string name="title_add_photo">Select a photo</string>
   <string name="content_value_title">OneCall Record Image</string>
   <string name="job_task_question_1">You have previously been working on Job#%1$s . Do you want to close that job and start with the new job as Job#%2$s ?</string>
   <string name="job_task_question_2">Do you want to start this Job#%1$s now?</string>
   <string name="job_task_question_3">You are currently working on this job.</string>
   <string name="job_task_question_4">You have switched to this job.</string>
   <string name="job_task_question_5">Do you want to remove the existing work plan for Job #%1$s?</string>
   <string name="job_task_load_failure">The data is corrupted during loading. Please check with the compatibility of the app version. A new empty task for this Job is created.</string>
   <string name="no_result_found">There is no possible solution points found from your entered distances.</string>
   <string name="set_results">This changes has been added to the correction list.</string>
   <string name="set_results_updated">This changes has been updated and replaced to the previous update on the correction list.</string>
   <string name="set_result_first_time">New data is added to the list.</string>
   <string name="route_edit_mode_start">You have changed the route position data and now you will need to adjust each position point.</string>
   <string name="route_edit_mode_done">Finish. Check the whole route for completion.</string>
   <string name="set_ab_first">Welcome to OneCall CP tool app. Now it is the fresh start, please touch and drag the AB dot on the screen, when confirm please press done.</string>
   <string name="set_ab_second">Please measure and report the distance from the AB point.</string>
   <string name="set_ab_3">Please measure the distance from the AB point and label both points.</string>
   <string name="title_intent_preference">Preference</string>
   <string name="summary_intent_preference">One call preference settings</string>
   <string name="pref_group_rendering">Rendering setting</string>
   <string name="pre_label">Line label</string>
   <string name="pre_label_sum">Enable display line label</string>
   <string name="pref_group_account">Account Settings</string>
   <string name="pre_login">User login</string>
   <string name="pre_login_sum">Please maintain your login name</string>
   <string name="pre_password">User password</string>
   <string name="pre_password_sum">Please maintain your password</string>
   <string name="row_label">Label</string>
   <string name="row_deep">Dep</string>
   <string name="row_d_a">Dis.A</string>
   <string name="row_d_b">Dis.B</string>
   <string name="row_control">Control</string>
   <string name="cable_radius">Diameter (cm)</string>
   <string name="djlabel_1">Job ID</string>
   <string name="djlabel_2">Project ID</string>
   <string name="djlabel_3">Status</string>
   <string name="djlabel_4">Progress</string>
   <string name="intro_point">please select a dot on the map..</string>
   <string name="dialog_msg_failure_timeout">Timeout in processing image data. Please try again.</string>
   <string name="dialog_msg_failure_export">Failure to export image map. Please try again.</string>
   <string name="dialog_msg_failure_timeout_upload">The server is too busy, please try again later.</string>
   <string name="dialog_msg_process">Processing image data</string>
   <string name="complete_upload">Data submission is now complete.</string>
   <string name="failure_upload">Data fail to upload or submit. Please try again later.</string>
   <string name="wipp">Work Progress Photos</string>
   <string name="record_plan_progress">Record Plan Progresses</string>
   <string name="basic_info">Basic Job Info</string>
   <string name="location_info">Location Pin</string>
   <string name="images_retrieved">Received Image Box</string>
   <string name="drawing_map">Draw Map</string>
   <string name="job_id_field">Job ID: </string>
   <string name="project_id_field">Project ID: </string>
   <string name="work_site_address_field">Work Site Adress:</string>
   <string name="submitjob">Submit Current Job</string>
   <string name="completion">Job Completion</string>
   <string name="form_linerecord">Form line record</string>
   <string name="form_questioniare">Form questionaire</string>
   <string name="assigned_base_map">Assigned Map #%1$s</string>
   <string name="save_data">Now saving data..</string>
</resources>