<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  android:layout_width="match_parent"
			  android:layout_height="match_parent"
			  android:orientation="vertical">

   <LinearLayout
	  android:layout_width="match_parent"
	  android:layout_height="wrap_content"
	  android:background="@drawable/above_shadow"
	  android:measureWithLargestChild="false"
	  android:orientation="horizontal">

	  <TextView
		 android:id="@+id/route_label"
		 android:layout_width="wrap_content"
		 android:layout_height="wrap_content"
		 android:layout_gravity="center_vertical"
		 android:layout_marginLeft="10px"
		 android:layout_weight="1"
		 android:width="40dp"
		 android:singleLine="true"
		 android:text="@string/djlabel_1"
		 android:textIsSelectable="true"
		 android:textSize="20dp"
		 android:typeface="sans" />

	  <TextView
		 android:id="@+id/column1"
		 android:layout_width="wrap_content"
		 android:layout_height="wrap_content"
		 android:layout_gravity="center_vertical"
		 android:layout_marginLeft="10px"
		 android:layout_toRightOf="@+id/route_label"
		 android:layout_weight="2"
		 android:width="100dp"
		 android:singleLine="true"
		 android:text="@string/djlabel_2"
		 android:textIsSelectable="false"
		 android:textSize="20dp"
		 android:typeface="sans" />

	  <TextView
		 android:id="@+id/column2"
		 android:layout_width="wrap_content"
		 android:layout_height="wrap_content"
		 android:layout_gravity="center_vertical"
		 android:layout_marginLeft="10px"
		 android:layout_toRightOf="@+id/column1"
		 android:layout_weight="1"
		 android:singleLine="true"
		 android:text="@string/djlabel_3"
		 android:textIsSelectable="false"
		 android:textSize="20dp"
		 android:typeface="sans" />

	  <TextView
		 android:id="@+id/column3"
		 android:layout_width="wrap_content"
		 android:layout_height="wrap_content"
		 android:layout_gravity="center_vertical"
		 android:layout_marginLeft="10px"
		 android:layout_toRightOf="@+id/column2"
		 android:layout_weight="1"

		 android:singleLine="true"
		 android:text="@string/djlabel_4"
		 android:textIsSelectable="false"
		 android:textSize="20dp"
		 android:typeface="sans" />

   </LinearLayout>

   <LinearLayout
	  android:id="@+id/mlist_container"
	  android:layout_width="fill_parent"
	  android:layout_height="fill_parent"
	  android:orientation="vertical"
	  android:background="@drawable/listviewbackground">
   </LinearLayout>
</LinearLayout>